--- a/index2.html
+++ b/index2.html
@@ -181,7 +181,7 @@
                                 <div class="contact-box-inner"><i class="bi bi-telephone-fill"></i> <a
                                         href="tel:+34642619622">+34 642-619-622</a></div>
                                 <div class="contact-box-inner"><i class="bi bi-envelope-fill"></i> <a
-                                        href="mailto:info@example.com">info@example.com</a></div>
+                                        href="mailto:tuktuktourmadrid@gmail.com">tuktuktourmadrid@gmail.com</a></div>
                             </div>
                         </nav>
                     </div>
