--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-xl-5 col-lg-6 col-md-6 text-xl-center text-md-start text-center">
                     <div class="topbar-ad">
-                        <a href="#">Black Friday Big Offer</a>
+                        <a href="#">B</a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 d-md-flex  d-none align-items-center justify-content-end">
