added porper whatsap

--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                         <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
                         <li><a href="#"><i class='bx bxl-instagram-alt'></i></a></li>
                         <li><a href="#"><i class='bx bxl-twitter' ></i></a></li>
-                        <li><a href="#"><i class="bx bxl-whatsapp-square"></i></a></li>
-                        <li><a href="#"><i class='bx bxl-pinterest'></i></a></li>
+                        <li><a href="https://wa.me/642619622?text=Hello! I'm interested on doing a tour with you"><i class="bx bxl-whatsapp-square"></i></a></li>
                     </ul>
                 </div>
             </div>
