fixed main hero

--- a/index.html
+++ b/index.html
@@ -272,9 +272,6 @@
                                             <i class='bx bx-category' ></i>
 
                                         </li>
-                                        <li class="search-toggle">
-                                            <i class='bx bx-search-alt'></i>
-                                        </li>
                                     </ul>
                                 </div>
                                 <div class="mobile-menu d-flex ">
@@ -361,9 +358,6 @@
                                     <i class='bx bx-category' ></i>
 
                                 </li>
-                                <li class="search-toggle">
-                                    <i class='bx bx-search-alt'></i>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -381,52 +375,16 @@
                     <div class="swiper-slide">
                         <div class="hero-single-slide">
                             <div class="hero-highlighted-bg">
-                                <img src="assets/images/banner/bg-highlight1.png" alt="">
+                                <img src="assets/images/banner/bg-highlight2.jpeg" alt="">
                             </div>
                             <div class="hero-content-bg">
                                <div class="hero-content position-relative">
-                                   <h2 class="hero-title">Travel & <span>Adventure</span></h2>
+                                   <h2 class="hero-title">Welcome to <span>Madrid</span></h2>
                                    <p>Sed convallis sit amet leo quis feugiat. Nunc interdum mollis facilisis. feugi
                                     Donec id the urna aliquet, suscipit turpis ut Donec id urna aliquet, suscipit turpis ut, facilisis purus.Sed convallis sit amet leo quis .</p>
                                     <div class="hero-btns">
-                                        <a href="package.html" class="button-fill-primary">View Adventure</a>
-                                        <a href="package.html" class="button-outlined-primary">Take A Tour</a>
-                                    </div>
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="hero-single-slide">
-                            <div class="hero-highlighted-bg">
-                                <img src="assets/images/banner/bg-highlight2.png" alt="">
-                            </div>
-                            <div class="hero-content-bg">
-                               <div class="hero-content position-relative">
-                                   <h2 class="hero-title"> Move The <span>Earth</span></h2>
-                                   <p>Sed convallis sit amet leo quis feugiat. Nunc interdum mollis facilisis. feugi
-                                    Donec id the urna aliquet, suscipit turpis ut Donec id urna aliquet, suscipit turpis ut, facilisis purus.Sed convallis sit amet leo quis .</p>
-                                    <div class="hero-btns">
-                                        <a href="package.html" class="button-fill-primary">View Adventure</a>
-                                        <a href="package.html" class="button-outlined-primary">Take A Tour</a>
-                                    </div>
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="hero-single-slide">
-                            <div class="hero-highlighted-bg">
-                                <img src="assets/images/banner/bg-highlight3.png" alt="">
-                            </div>
-                            <div class="hero-content-bg">
-                               <div class="hero-content position-relative">
-                                   <h2 class="hero-title">Travel & <span>Adventure</span></h2>
-                                   <p>Sed convallis sit amet leo quis feugiat. Nunc interdum mollis facilisis. feugi
-                                    Donec id the urna aliquet, suscipit turpis ut Donec id urna aliquet, suscipit turpis ut, facilisis purus.Sed convallis sit amet leo quis .</p>
-                                    <div class="hero-btns">
-                                        <a href="package.html" class="button-fill-primary">View Adventure</a>
-                                        <a href="package.html" class="button-outlined-primary">Take A Tour</a>
+                                        <a href="package.html" class="button-fill-primary">Take Tour</a>
+                                        <a href="package.html" class="button-outlined-primary">Check all tours</a>
                                     </div>
                                </div>
                             </div>
@@ -437,8 +395,6 @@
         </div>
 
         <div class="slider-arrows text-center d-lg-flex d-none">
-            <div class="hero-prev" tabindex="0" role="button" aria-label="Previous slide"> <i class="bi bi-arrow-left"></i> Prev </div>
-            <div class="hero-next" tabindex="0" role="button" aria-label="Next slide">Next <i class="bi bi-arrow-right"></i></div>
         </div>
         <div class="hero-pagination d-block w-auto">
 
@@ -1462,7 +1418,7 @@
 
                     <ul class="footer-contact-list">
                         <li><i class="bi bi-telephone-x"></i> <a href="tel:+34642619622">+34 642-619-622</a></li>
-                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:info@tourxpro.com">info@tourxpro.com</a></li>
+                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:info@tuktuktourmadrid.com">info@tuktuktourmadrid.com</a></li>
                         <li><i class="bi bi-geo-alt"></i> <a href="#">2752 Willison Street Eagan, United State</a></li>
                     </ul>
                 </div>
@@ -1475,7 +1431,7 @@
                <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-6 order-lg-1 order-3 ">
                     <div class="copyright-link text-lg-start text-center">
-                        <p>Copyright 2021 TourXPro | Design By <a href="#"> Egens Lab</a></p>
+                        <p>Copyright 2021 tuktuktourmadrid | Design By <a href="#"> Egens Lab</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4  order-lg-2 order-1">
