--- a/blog.html
+++ b/blog.html
@@ -742,7 +742,7 @@
 
                     <ul class="footer-contact-list">
                         <li><i class="bi bi-telephone-x"></i> <a href="tel:+34642619622">+34 642-619-622</a></li>
-                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:info@tourxpro.com">info@tourxpro.com</a></li>
+                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:info@tuktuktourmadrid.com">info@tuktuktourmadrid.com</a></li>
                         <li><i class="bi bi-geo-alt"></i> <a href="#">2752 Willison Street Eagan, United State</a></li>
                     </ul>
                 </div>
@@ -755,7 +755,7 @@
                <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-6 order-lg-1 order-3 ">
                     <div class="copyright-link text-lg-start text-center">
-                        <p>Copyright 2021 TourXPro | Design By <a href="#"> Egens Lab</a></p>
+                        <p>Copyright 2021 tuktuktourmadrid | Design By <a href="#"> Egens Lab</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4  order-lg-2 order-1">
