--- a/index.html
+++ b/index.html
@@ -285,47 +285,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-6 col-xs-6">
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-6 col-xs-6">
                         <nav class="main-nav float-end">
                             <ul>
-                                <li><a href="about.html">About Us</a></li>
-
                                 <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Destination</a>
+                                    <a href="javascript:void(0)">Tours</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
-                                        <li><a href="destination.html">Destination</a></li>
-                                        <li><a href="destination-details.html">Destination Details</a></li>
+                                        <li><a href="package-details.html">Welcome to Madrid</a></li>
+                                        <li><a href="package-details.html">Historical</a></li>
+                                        <li><a href="package-details.html">Complete</a></li>
+                                        <li><a href="package-details.html">Wonders of Madrid </a></li>
                                     </ul>
                                 </li>
                                 <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Package</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="package.html">Package Grid</a></li>
-                                        <li><a href="package-sidebar.html">Package Sidebar</a></li>
-                                        <li><a href="package-standard.html">Package Standard</a></li>
-                                        <li><a href="package-details.html">Package Details </a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Blogs</a>
+                                    <a href="javascript:void(0)">Info</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
                                         <li><a href="blog.html">Blog Grid</a></li>
                                         <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
                                         <li><a href="blog-standard.html">Blog Standard </a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Pages</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="guide.html">Guide</a></li>
-                                        <li><a href="gallary.html">Gallary</a></li>
-                                        <li><a href="faq.html">FAQ</a></li>
-                                        <li><a href="404.html">404</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contact Us</a></li>
@@ -336,16 +316,6 @@
                                     <div class="contact-box-inner"><i class="bi bi-envelope-fill"></i> <a href="mailto:tuktuktourmadrid@gmail.com">tuktuktourmadrid@gmail.com</a></div>
                             </div>
                         </nav>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="nav-right float-end d-xl-flex d-none ">
-                            <ul class="nav-actions">
-                                <li class="category-toggle">
-                                    <i class='bx bx-category' ></i>
-
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -666,15 +636,14 @@
                 <div class="col-lg-8">
                     <div class="section-head-alpha text-center mx-auto">
                         <h2>Tour Guide</h2>
-                        <p>Duis rutrum nisl urna. Maecenas vel libero faucibus nisi venenatis hendrerit a id lectus. Suspendissendt
-                            blandit interdum. Sed pellentesque at nunc eget consectetur.</p>
+                        <p>Our guides are the heart and soul of our tours. With their expertise, passion, and friendly demeanor, they ensure an unforgettable experience for every traveler. Join our tours and let our knowledgeable guides bring the destination to life.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row hiddenRow">
                 <div class="col-lg-4 col-md-6">
-                    <div class="guide-card-alpha">
+                    <div class="guide-card-alpha guide-card-alpha-hidden">
                         <div class="guide-image">
                             <img src="assets/images/guide/guide-md3.png" alt="">
                             <ul class="guide-social-links">
@@ -695,25 +664,23 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="guide-card-alpha">
                         <div class="guide-image">
-                            <img src="assets/images/guide/guide-m2.png" alt="">
-                            <ul class="guide-social-links">
+                            <img src="assets/images/guide/guide-pic-1.jpeg" alt="">
+                            <!-- <ul class="guide-social-links">
                                 <li><a href="#"><i class='bx bxl-instagram' ></i></a></li>
                                 <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
                                 <li><a href="#"><i class='bx bxl-twitter' ></i></a></li>
                                 <li><a href="#"><i class='bx bxl-whatsapp' ></i></a></li>
-
-                            </ul>
+                            </ul> -->
                         </div>
 
                         <div class="guide-content">
-                            <h4 class="guide-name">Charlotte
-                                Sophia</h4>
+                            <h4 class="guide-name">Borja Sánchez</h4>
                             <h6 class="guide-designation">Tour Guide</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="guide-card-alpha">
+                    <div class="guide-card-alpha guide-card-alpha-hidden">
                         <div class="guide-image">
                             <img src="assets/images/guide/guide-md1.png" alt="">
                             <ul class="guide-social-links">
@@ -737,7 +704,7 @@
     <!-- =============== Guide area end =============== -->
 
     <!-- =============== Blog area start =============== -->
-    <div class="blog-area blog-style-one pt-110  ">
+    <!-- <div class="blog-area blog-style-one pt-110  ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -813,7 +780,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- =============== Blog area end =============== -->
 
     <!-- =============== Footer area start =============== -->
@@ -826,7 +793,7 @@
                 <div class="row justify-content-center g-4">
                     <div class="col-lg-4">
                         <div class="footer-about text-lg-start text-center">
-                            <p>Duis rutrum nisl urna. Maecenas vel libero faucibus nisi venenatis hendrerit a id lectus. Suspendissendt molestie turpis nec lacinia vehicula.</p>
+                            <p>Our mission is to provide enriching experiences that showcase the vibrant heritage and traditions of the destinations we explore.</p>
                             <div class="footer-social-wrap">
                                 <h5>Follow Us On:</h5>
 
@@ -901,7 +868,7 @@
 
                     <ul class="footer-contact-list">
                         <li><i class="bi bi-telephone-x"></i> <a href="tel:+34642619622">+34 642-619-622</a></li>
-                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:info@tuktuktourmadrid.com">info@tuktuktourmadrid.com</a></li>
+                        <li><i class="bi bi-envelope-open"></i> <a href="mailto:tuktuktourmadrid@gmail.com">tuktuktourmadrid@gmail.com</a></li>
                         <li><i class="bi bi-geo-alt"></i> <a href="#">2752 Willison Street Eagan, United State</a></li>
                     </ul>
                 </div>
@@ -914,12 +881,12 @@
                <div class="row align-items-center justify-content-center">
                 <div class="col-lg-4 col-md-6 order-lg-1 order-3 ">
                     <div class="copyright-link text-lg-start text-center">
-                        <p>Copyright 2021 tuktuktourmadrid | Design By <a href="#"> Egens Lab</a></p>
+                        <p>Copyright 2023 TukTuk Tour Madrid | Design By <a href="#"> Tangerine Coding</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4  order-lg-2 order-1">
                     <div class="footer-logo text-center">
-                        <a href="index.html"><img src="assets/images/logo-w.png" alt=""></a>
+
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 order-lg-3 order-2">
