added proper images

--- a/index.html
+++ b/index.html
@@ -37,194 +37,6 @@
     </div>
      <!-- ===============  Preloder end =============== -->
 
-    <!-- ===============  Sidebers area start =============== -->
-    <div class="main-searchbar-wrapper">
-        <div class="container">
-            <div class="multi-main-searchber">
-                <div class="main-searchbar-close search-toggle">
-                    <i class="bi bi-x-lg"></i>
-                </div>
-                <form action="#" method="post" id="main_searchbar">
-                    <div class="row g-4">
-                        <div class="col-lg-10">
-                            <div class="row gx-0 gy-4">
-                                <div class="col-lg-3 col-md-6">
-                                    <div class="search-box-single destination-box">
-                                        <div class="searchbox-icon ">
-                                            <i class="bi bi-geo-alt"></i>
-                                        </div>
-
-                                        <div class="searchbox-input">
-                                            <label for="deatination_drop">Destination</label>
-                                            <select data-placeholder="Where Are You Going?" id="deatination_drop">
-                                                <option value="">Where Are You Going?</option>
-                                                <optgroup label="India">
-                                                    <option>
-                                                       Solt Lake
-                                                    </option>
-                                                    <option>
-                                                       Kolkata
-                                                    </option>
-                                                    <option>
-                                                      Mohamia
-                                                    </option>
-                                                    <option>
-                                                      Mumbai
-                                                    </option>
-                                                    <option>
-                                                      New Delhi
-                                                    </option>
-                                                </optgroup>
-                                                <optgroup label=" Bangladash">
-                                                    <option>
-                                                        Cox's Bazer
-                                                    </option>
-                                                    <option>
-                                                        Rangamati
-                                                    </option>
-                                                    <option>
-                                                        Banderban
-                                                    </option>
-                                                </optgroup>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-3 col-md-6">
-                                    <div class="search-box-single type-box">
-                                        <div class="searchbox-icon">
-                                            <i class="bi bi-text-paragraph"></i>
-                                        </div>
-
-                                        <div class="searchbox-input">
-                                            <label for="activity-dropdown">Travel Type</label>
-                                            <select class="defult-select-drowpown" data-placeholder="All Activity" id="activity-dropdown">
-                                                <option value="">All Activity</option>
-                                                <option value="1">Type 1</option>
-                                                <option value="2">Type 2</option>
-                                                <option value="3">Type 3</option>
-                                                <option value="4">Type 4</option>
-                                              </select>
-
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-md-6">
-                                    <div class="search-box-single type-box">
-                                        <div class="searchbox-icon">
-                                            <i class="bi bi-person-plus"></i>
-                                        </div>
-
-                                        <div class="searchbox-input">
-                                            <label for="person-dropdown">Person</label>
-                                            <select class="defult-select-drowpown" id="person-dropdown">
-                                                <option selected value="0">01</option>
-                                                <option value="1">02</option>
-                                                <option value="2">03</option>
-                                                <option value="3">04</option>
-                                                <option value="4">05</option>
-                                              </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-md-6">
-                                    <div class="search-box-single date-box">
-                                        <div class="searchbox-icon">
-                                            <i class="bi bi-capslock"></i>
-                                        </div>
-
-                                       <div class="searchbox-input date-picker-input">
-                                            <label for="datepicker">When</label>
-                                            <input placeholder="Select your date" type="text" name="checkIn" id="datepicker" value="" class="calendar">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-2">
-                            <div class="main-form-submit">
-                                <button type="submit">Find Now</button>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-    <div class="category-sidebar-wrapper">
-        <div class="category-sidebar">
-            <div class="category-header d-flex justify-content-between align-items-center">
-                <h4>Category</h4>
-                <div class="category-toggle">
-                    <i class="bi bi-x-lg"></i>
-                </div>
-            </div>
-
-            <div class="row row-cols-lg-3 row-cols-2 gy-5 mt-3">
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate1.svg" alt="">
-                        </div>
-                        <h5>Adventure</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate2.svg" alt="">
-                        </div>
-                        <h5>Group Tour</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate3.svg" alt="">
-                        </div>
-                        <h5>Couple Tour</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate4.svg" alt="">
-                        </div>
-                        <h5>Single Tour</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate5.svg" alt="">
-                        </div>
-                        <h5>Honeymoon</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate6.svg" alt="">
-                        </div>
-                        <h5>Sea Beach</h5>
-                    </a>
-                </div>
-                <div class="col">
-                    <a class="category-box" href="package.html">
-                        <div class="cate-icon mx-auto">
-                            <img src="assets/images/icons/cate7.svg" alt="">
-                        </div>
-                        <h5>Mountain Tour</h5>
-                    </a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!-- ===============  Sidebers area end =============== -->
 
     <!-- ===============  topbar area start =============== -->
     <div class="topbar-area topbar-style-one">
@@ -376,18 +188,18 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="package-card-alpha">
                         <div class="package-thumb">
-                            <a href="package-details.html"><img src="assets/images/package/tour-madrid-thumbnail-1.jpeg" alt=""></a>
+                            <a href="package-details-1.html"><img src="assets/images/package/tour-madrid-thumbnail-1.jpeg" alt=""></a>
                             <p class="card-lavel">
                                 <i class="bi bi-clock"></i> <span>60 min</span>
                             </p>
                         </div>
                         <div class="package-card-body">
-                            <h3 class="p-card-title"><a href="package-details.html">Immerse yourself in history and charm at these iconic sites
-                                of the Hasburg-era
+                            <h3 class="p-card-title"><a href="package-details-1.html">Immerse yourself in history and charm at these iconic sites
+                                of the Hasburg Era
                             </a></h3>
                             <div class="p-card-bottom">
                                 <div class="book-btn">
-                                    <a href="package-details.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
+                                    <a href="package-details-1.html">Book Now <i class='bx bxs-right-arrow-alt'></i></a>
                                 </div>
 
                                 <div class="p-card-info">
@@ -491,7 +303,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="gallary-item">
                         <img src="assets/images/gallary/tuktuk-alcala-thumb.jpeg" alt="Image Gallery">
-                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/g-xl1.png">
+                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/tuktuk-alcala-thumb.jpeg">
                             <i class="bi bi-eye"></i>
                         </a>
                     </div>
@@ -499,7 +311,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="gallary-item">
                         <img src="assets/images/gallary/tuktuk-mayor-thumb.jpeg" alt="Image Gallery">
-                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/g-xl2.png">
+                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/tuktuk-mayor-thumb.jpeg">
                             <i class="bi bi-eye"></i>
                         </a>
                     </div>
@@ -508,7 +320,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="gallary-item">
                         <img src="assets/images/gallary/tuktuk-almudena-thumb.jpeg" alt="Image Gallery">
-                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/g-xl2.png">
+                        <a class="gallary-item-overlay" data-fancybox="gallery" data-caption="Caption Here" href="assets/images/gallary/tuktuk-almudena-thumb.jpeg">
                             <i class="bi bi-eye"></i>
                         </a>
                     </div>
@@ -841,22 +653,22 @@
 
                             <div class="footer-gallary-grid">
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-1.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-1.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-1.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-1.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-2.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-2.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-2.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-2.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-3.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-3.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-3.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-3.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-4.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-4.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-4.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-4.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-5.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-5.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-5.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-5.jpeg" alt=""></a>
                                 </div>
                                 <div class="footer-gallary-item">
-                                    <a href="assets/images/gallary/fg-6.png"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-6.png" alt=""></a>
+                                    <a href="assets/images/gallary/fg-6.jpeg"  data-fancybox="footer" data-caption="Caption Here"><img src="assets/images/gallary/fg-6.jpeg" alt=""></a>
                                 </div>
                             </div>
                         </div>
